# music-player

./: .gitignore  CMakeLists.txt  README  musicplayer.kdev4
src/: config.hpp.in  docks.cpp  docks.h  filetreedock.cpp  filetreedock.h  libraryalbum.cpp  libraryalbum.h  libraryartist.cpp  libraryartist.h  librarydock.cpp  librarydock.h  librarymodel.cpp  librarymodel.h  libraryroot.cpp  libraryroot.h  librarysong.cpp  librarysong.h  main.cpp  mainwin.cpp  mainwin.hpp  mediaaction.cpp  mediaaction.h  mediaplayer.cpp  mediaplayer.hpp  mediaplaylist.cpp  mediaplaylist.hpp  musicplayer.cpp  musicplayer.h  musicplayer.ui  overloadset.cpp  overloadset.h
